fixed overflow

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,7 +1,7 @@
-
 .experience{
     margin-top: 20px;
     margin-bottom: 20px;
+    height: max-content;
 }
 .experience h3{
     margin-bottom: -13px;
